chore: remove self hosted runners

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ concurrency:
 jobs:
   lint-and-format:
     name: ESLint & Prettier
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     permissions:
       contents: read
 
