fix: templating stuff

--- a/deployment/.env.example
+++ b/deployment/.env.example
@@ -43,9 +43,9 @@ DEBUG=false
 
 # MongoDB Configuration
 # When using docker-compose, MongoDB is automatically configured
-# The MONGODB_URI is set internally to: mongodb://mongodb:27017/monorepo-template
+# The MONGODB_URI is set internally to: mongodb://mongodb:27017/baaa-hub
 # For external MongoDB, set this variable:
-# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/activity-tracker
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/baaa-hub
 
 # =============================================================================
 # Production Deployment with Nginx Proxy Manager (NPM)
