--- a/environments/.env.example
+++ b/environments/.env.example
@@ -33,7 +33,7 @@ BACKEND_PORT=3000
 NODE_ENV=development
 
 # MongoDB Configuration
-MONGODB_URI=mongodb://localhost:27017/activity-tracker
+MONGODB_URI=mongodb://localhost:27017/baaa-hub
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:4000
