--- a/.github/workflows/test-and-coverage.yml
+++ b/.github/workflows/test-and-coverage.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Build shared types
+        run: pnpm --filter @baaa-hub/shared-types build
+
       - name: Run tests
         run: pnpm fe:test --run
         timeout-minutes: 5
@@ -68,6 +71,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+
+      - name: Build shared types
+        run: pnpm --filter @baaa-hub/shared-types build
 
       - name: Run tests with coverage
         id: tests
