fix: callback endpoint

--- a/deployment/.env.example
+++ b/deployment/.env.example
@@ -17,7 +17,7 @@
 # Auth0 Configuration
 VITE_AUTH_DOMAIN=your-tenant.auth0.com
 VITE_AUTH_CLIENT_ID=your_auth0_client_id
-VITE_AUTH_REDIRECT_URI=http://localhost:8080/callback
+VITE_AUTH_REDIRECT_URI=http://localhost:8080/login/callback
 VITE_AUTH_DATABASE_CONNECTION=Username-Password-Authentication
 
 # API Configuration
@@ -70,7 +70,7 @@ MINIO_BUCKET=baaa-hub-images
 # For production deployment to https://dev1.pette.dev:
 #
 # 1. Update the values:
-#    VITE_AUTH_REDIRECT_URI=https://dev1.pette.dev/callback
+#    VITE_AUTH_REDIRECT_URI=https://dev1.pette.dev/login/callback
 #    VITE_API_URL=https://dev1.pette.dev
 #    CORS_ORIGIN=https://dev1.pette.dev
 #
