--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,7 @@ web_modules/
 
 # Allow .env.example files to be committed
 !**/.env.example
+!**/.env.auth0.example
 
 # parcel-bundler cache (https://parceljs.org/)
 
