--- a/deployment/nginx-proxy.conf
+++ b/deployment/nginx-proxy.conf
@@ -12,9 +12,9 @@ http {
     default_type application/octet-stream;
 
     # Logging
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format main ''$remote_addr - $remote_user [$time_local] "$request" ''
+                    ''$status $body_bytes_sent "$http_referer" ''
+                    ''"$http_user_agent" "$http_x_forwarded_for"'';
     access_log /var/log/nginx/access.log main;
 
     # Performance
@@ -31,17 +31,15 @@ http {
     gzip_comp_level 6;
     gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/rss+xml font/truetype font/opentype application/vnd.ms-fontobject image/svg+xml;
 
-    # Upstream backend server
+    # Upstream definitions
     upstream backend {
         server backend:3000;
     }
 
-    # Upstream frontend server
     upstream frontend {
         server frontend:80;
     }
 
-    # Upstream Keycloak server
     upstream keycloak {
         server keycloak:8080;
     }
@@ -60,7 +58,7 @@ http {
             proxy_pass http://backend/health;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
+            proxy_set_header Connection ''upgrade'';
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -73,30 +71,47 @@ http {
             proxy_pass http://backend/api/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
+            proxy_set_header Connection ''upgrade'';
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
-            
+
             # Increase timeouts for long-running requests
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
         }
 
-        # Keycloak proxy
+        # Keycloak proxy (Legacy /auth/ path)
         location /auth/ {
             proxy_pass http://keycloak/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto "https";
             proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Port $server_port;
-            
+            proxy_set_header X-Forwarded-Port "443";
+
+            # Keycloak needs larger buffers
+            proxy_buffer_size 64k;
+            proxy_buffers 8 64k;
+            proxy_busy_buffers_size 64k;
+        }
+
+        # Keycloak proxy (Standard paths: /realms, /resources, /js)
+        location ~ ^/(realms|resources|js)/ {
+            proxy_pass http://keycloak;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto "https";
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port "443";
+
             # Keycloak needs larger buffers
             proxy_buffer_size 64k;
             proxy_buffers 8 64k;
@@ -108,7 +123,7 @@ http {
             proxy_pass http://frontend/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
+            proxy_set_header Connection ''upgrade'';
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
