--- a/deployment/nginx-proxy.conf
+++ b/deployment/nginx-proxy.conf
@@ -11,12 +11,6 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Logging
-    log_format main ''$remote_addr - $remote_user [$time_local] "$request" ''
-                    ''$status $body_bytes_sent "$http_referer" ''
-                    ''"$http_user_agent" "$http_x_forwarded_for"'';
-    access_log /var/log/nginx/access.log main;
-
     # Performance
     sendfile on;
     tcp_nopush on;
@@ -58,7 +52,7 @@ http {
             proxy_pass http://backend/health;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection ''upgrade'';
+            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -71,7 +65,7 @@ http {
             proxy_pass http://backend/api/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection ''upgrade'';
+            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -123,7 +117,7 @@ http {
             proxy_pass http://frontend/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection ''upgrade'';
+            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
