fix: added separate issuer

--- a/deployment/.env.example
+++ b/deployment/.env.example
@@ -17,8 +17,7 @@
 APP_PORT=8080
 
 # CORS origin - URL where the application is accessed
-# Local: http://localhost:8080
-# Production: https://your-domain.com
+
 CORS_ORIGIN=http://localhost:8080
 
 # Debug mode (true/false)
@@ -32,6 +31,12 @@ DEBUG=false
 KEYCLOAK_URL=http://keycloak:8080
 KEYCLOAK_REALM=baaa-hub
 KEYCLOAK_CLIENT_ID=baaa-hub-client
+
+# Keycloak Issuer URL
+# This should match the "iss" claim in the JWT tokens issued by Keycloak
+# Local: http://localhost:8080/realms/baaa-hub
+# Production: https://your-domain.com/realms/baaa-hub
+KEYCLOAK_ISSUER=${KEYCLOAK_URL}/realms/${KEYCLOAK_REALM}
 
 # Service account credentials for admin operations (user management)
 # These are optional - only needed if using admin API features
