--- a/environments/.env.example
+++ b/environments/.env.example
@@ -38,6 +38,7 @@ CORS_ORIGIN=http://localhost:4000
 # Keycloak Configuration (Backend)
 KEYCLOAK_URL=http://localhost:8180
 KEYCLOAK_REALM=baaa-hub
+KEYCLOAK_ISSUER="http://localhost:8180/realms/baaa-hub"
 KEYCLOAK_CLIENT_ID=baaa-hub-client
 KEYCLOAK_WEBHOOK_SECRET=your-secure-webhook-secret
 
