fix: backend variables

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -125,6 +125,7 @@ services:
       DEBUG: ${DEBUG:-false}
       KEYCLOAK_URL: http://keycloak:8080
       KEYCLOAK_REALM: ${KEYCLOAK_REALM:-baaa-hub}
+      KEYCLOAK_ISSUER: ${KEYCLOAK_ISSUER:-baaa-hub}
       KEYCLOAK_CLIENT_ID: ${KEYCLOAK_CLIENT_ID:-baaa-hub-client}
       KEYCLOAK_ADMIN_CLIENT_ID: ${KEYCLOAK_ADMIN_CLIENT_ID}
       KEYCLOAK_ADMIN_CLIENT_SECRET: ${KEYCLOAK_ADMIN_CLIENT_SECRET}
