--- a/deployment/Dockerfile.backend
+++ b/deployment/Dockerfile.backend
@@ -77,6 +77,7 @@ CMD ["sh", "-c", "\
     echo \"DEBUG=${DEBUG:-false}\" >> /app/environments/.env.production && \
     echo \"KEYCLOAK_URL=${KEYCLOAK_URL}\" >> /app/environments/.env.production && \
     echo \"KEYCLOAK_REALM=${KEYCLOAK_REALM}\" >> /app/environments/.env.production && \
+    echo \"KEYCLOAK_ISSUER=${KEYCLOAK_ISSUER}\" >> /app/environments/.env.production && \
     echo \"KEYCLOAK_CLIENT_ID=${KEYCLOAK_CLIENT_ID}\" >> /app/environments/.env.production && \
     echo \"KEYCLOAK_ADMIN_CLIENT_ID=${KEYCLOAK_ADMIN_CLIENT_ID}\" >> /app/environments/.env.production && \
     echo \"KEYCLOAK_ADMIN_CLIENT_SECRET=${KEYCLOAK_ADMIN_CLIENT_SECRET}\" >> /app/environments/.env.production && \
