--- a/package.json
+++ b/package.json
@@ -40,19 +40,20 @@
     },
     "onlyBuiltDependencies": [
       "esbuild",
+      "msw",
       "sharp"
     ]
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "concurrently": "^9.2.1",
+    "dotenv-cli": "^7.4.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
-    "prettier": "^3.6.2",
-    "dotenv-cli": "^7.4.1"
+    "prettier": "^3.6.2"
   },
   "engines": {
     "node": ">=20.0.0",
